--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,4 +1,19 @@
 # Username to target
 target.username=virginmedia
 
+output.file.extension=csv
+
+
+# Do not change properties below this comment unless you know what you are doing
+user-agent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/43.0.2357.132 Safari/537.36
+connection.timeout=30000
+
+# Folder to put output CSV files
+output-folder=output/
+
+# File to save state
+state-file=${output-folder}saved-state.${output.file.extension}
+
+base-url=https://twitter.com/${target.username}/with_replies
+
 
