CSV read write Starting the first level

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,5 +1,9 @@
 # Username to target
 target.username=virginmedia
+target.starting-tweet=688705211456733185
+
+# To start over delete all files from output directory or set the following property false
+target.continue=true
 
 output.file.extension=csv
 
@@ -9,11 +13,11 @@ user-agent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko
 connection.timeout=30000
 
 # Folder to put output CSV files
-output-folder=output/
+output-folder=output
 
 # File to save state
-state-file=${output-folder}saved-state.${output.file.extension}
+state-file=${output-folder}/saved-state.${output.file.extension}
 
 base-url=https://twitter.com/${target.username}/with_replies
 
-
+concurrent-threads=10
