--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>in.clayfish</groupId>
     <artifactId>twitter-scraper</artifactId>
     <version>0.1.0</version>
+    <packaging>jar</packaging>
+
     <description>Java based scraper to scrape the tweets with replies.</description>
     <url>http://clayfish.github.io/twitter-scraper/</url>
     <licenses>
@@ -32,10 +34,11 @@
     <properties>
         <java.version>1.8</java.version>
 
+        <jsoup.version>1.8.3</jsoup.version>
         <junit.version>4.11</junit.version>
         <lombok.version>1.12.2</lombok.version>
         <apache.commons.version>3.2.1</apache.commons.version>
-        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>2.6</maven.compiler.plugin.version>
     </properties>
 
     <build>
@@ -50,16 +53,23 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
+                    <artifactId>maven-assembly-plugin</artifactId>
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                        <archive>
+                            <manifest>
+                                <source>${java.version}</source>
+                                <target>${java.version}</target>
+                                <mainClass>in.clayfish.Application</mainClass>
+                            </manifest>
+                        </archive>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
-
     </build>
 
     <dependencies>
@@ -80,6 +90,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
@@ -89,7 +105,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.8.3</version>
+            <version>${jsoup.version}</version>
         </dependency>
 
     </dependencies>
