First step complete

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,6 +1,7 @@
 # Username to target
 target.username=virginmedia
 target.starting-tweet=688705211456733185
+target.last-tweet=
 
 # To start over delete all files from output directory or set the following property false
 target.continue=true
