--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <junit.version>4.11</junit.version>
         <lombok.version>1.12.2</lombok.version>
         <apache.commons.version>3.2.1</apache.commons.version>
-        <maven.compiler.plugin.version>2.6</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
     </properties>
 
     <build>
@@ -53,19 +53,11 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-assembly-plugin</artifactId>
+                    <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
-                        <descriptorRefs>
-                            <descriptorRef>jar-with-dependencies</descriptorRef>
-                        </descriptorRefs>
-                        <archive>
-                            <manifest>
-                                <source>${java.version}</source>
-                                <target>${java.version}</target>
-                                <mainClass>in.clayfish.Application</mainClass>
-                            </manifest>
-                        </archive>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
                 </plugin>
             </plugins>
@@ -106,6 +98,12 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>${jsoup.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
     </dependencies>
