Progress Have hit a block

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -3,6 +3,9 @@ target.username=virginmedia
 target.starting-tweet=688705211456733185
 target.last-tweet=
 
+# Possible values are TEST, DEV, PROD
+mode=development
+
 # To start over delete all files from output directory or set the following property false
 target.continue=true
 
