--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,7 +1,7 @@
 # Username to target
 target.username=virginmedia
-target.starting-tweet=689423598503604225
-target.last-tweet=688705211456733185
+target.starting-tweet=688032551013847040
+target.last-tweet=
 
 # Possible values are TEST, DEV, PROD
 mode=development
@@ -17,7 +17,7 @@ user-agent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko
 connection.timeout=30000
 
 # Folder to put output CSV files
-output-folder=output
+output-folder=output/${target.username}
 
 # File to save state
 state-file=${output-folder}/saved-state.${output.file.extension}
