--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 # Username to target
 target.username=virginmedia
-target.starting-tweet=672331861499224064
+target.starting-tweet=691204536250322944
 target.last-tweet=
 
 # Possible values are TEST, DEV, PROD
@@ -8,6 +8,7 @@ mode=development
 
 # To start over delete all files from output directory or set the following property false
 target.continue=true
+target.step=1
 
 output.file.extension=csv
 
@@ -24,4 +25,4 @@ state-file=${output-folder}/saved-state.${output.file.extension}
 
 base-url=https://twitter.com/${target.username}/with_replies
 
-concurrent-threads=10
+concurrent-threads=25
