Trying to put it on EC2

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ Temporary Items
 .apdisk
 
 # output/
+
+# Starting it on another laptop so that I can continue working on this one while it fetches tweet IDs
