--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>in.clayfish</groupId>
+    <groupId>in.clayfish.pyry</groupId>
     <artifactId>twitter-scraper</artifactId>
     <version>0.1.0</version>
     <packaging>jar</packaging>
@@ -88,7 +88,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.nishionline.genevah.Application</mainClass>
+                            <mainClass>in.clayfish.pyry.Application</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
