Config for BTCare

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,11 +1,11 @@
 # Username to target
-target.username=virginmedia
-target.starting-tweet=694984047731281920
-target.last-tweet=690652241817133056
+target.username=BTCare
+target.starting-tweet=695970022255099905
+target.last-tweet=
 
 # To start over delete all files from output directory or set the following property false
 target.continue=true
-target.step=2
+target.step=1
 
 # Possible values are TEST, DEV, PROD
 mode=development
