Logging is home with log4j2

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,11 +1,11 @@
 # Username to target
 target.username=BTCare
-target.starting-tweet=695970022255099905
+target.starting-tweet=
 target.last-tweet=
 
 # To start over delete all files from output directory or set the following property false
 target.continue=true
-target.step=1
+target.step=2
 
 # Possible values are TEST, DEV, PROD
 mode=development
@@ -25,4 +25,4 @@ state-file=${output-folder}/saved-state.${output.file.extension}
 
 base-url=https://twitter.com/${target.username}/with_replies
 
-concurrent-threads=10
+concurrent-threads=25
